src2/objects/NES_AccountTelemetry__c.object
<CustomObject>
    <description>This object records machine preferences as defined by a SC/CC user to set business rule parameters for IoT Cloud notable events and machine telemetry configurations.</description>
    <fields>
        <fullName>AccountLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_410, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_410))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>NES_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Status__c</fullName>
        <formula>TEXT(NES_Account__r.ClubStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Club Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectivityAbuseEmailSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connectivity Abuse Email Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last30DaysConsumptionUnrecognizedCaps__c</fullName>
        <inlineHelpText>Unrecognized Caps consumed over the last 30 days for all machines</inlineHelpText>
        <label>Unrecognized Caps Consumed - 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyTotalDataUsageMB__c</fullName>
        <inlineHelpText>Total data usage in MB for current month for all machines</inlineHelpText>
        <label>Monthly Total Data Usage (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountTelemetries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_AutomaticOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe to Automatic Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_Client_Lead_Time__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Client Lead Time (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_ConnectivityDataLimit__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Connectivity Data Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_ContractTelemetryEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract - Telemetry Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DaysOOSThAllCapsReOrder__c</fullName>
        <inlineHelpText>Days to out-of-stock Threshold All Caps for re-order</inlineHelpText>
        <label>Days until Out of Stock Limit - All Caps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Last30daysConsumptionUCML__c</fullName>
        <defaultValue>1000</defaultValue>
        <inlineHelpText>Consumption Limit for Unrecognized caps over 30 days</inlineHelpText>
        <label>Unrecognized Caps Limit - 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_TelemetryOptin__c</fullName>
        <inlineHelpText>Contract - Telemetry Opt-in</inlineHelpText>
        <label>Contract - Telemetry Opt-in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                    <label>Full</label>
                </value>
                <value>
                    <fullName>EGC</fullName>
                    <label>No Capsule recognition</label>
                </value>
                <value>
                    <fullName>TO</fullName>
                    <label>Technical</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumPreferencesToOrder__c</fullName>
        <description>Number of Account Telemetry preferences that have the actual stock under the order point (limit). This field is necessary for calculations (not show in layout) and send the email to CRC with the order.</description>
        <label>Num preferences to order</label>
        <summaryFilterItems>
            <field>NES_AccountTelemetryPreferences__c.AutoOrder__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NES_AccountTelemetryPreferences__c.OrderNeeded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>NES_AccountTelemetryPreferences__c.NES_Account_Telemetry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderConfirmationProcess__c</fullName>
        <label>Order confirmation process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full automatic</fullName>
                </value>
                <value>
                    <fullName>Opt-out</fullName>
                </value>
                <value>
                    <fullName>Opt-in</fullName>
                </value>
                <value>
                    <fullName>CRC outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderInProgress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order in progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResupplyCycle__c</fullName>
        <defaultValue>&apos;61&apos;</defaultValue>
        <label>Resupply Cycle (in Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnrecognizedCapsOverLimitEmailSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unrecognized caps over limit email send</label>
        <type>Checkbox</type>
    </fields>
    <label>Telemetry Account</label>
    <listViews>
        <fullName>X00_All_Telemetry_Accounts</fullName>
        <columns>NAME</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_AutomaticOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>00: All Telemetry Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_My_Telemetry_Accounts</fullName>
        <columns>NAME</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_AutomaticOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>01: My Telemetry Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X03_Subscribed_to_automatic_re_ordering</fullName>
        <columns>NAME</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_AutomaticOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_AutomaticOrder__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02: Subscribed to automatic re-ordering</label>
    </listViews>
    <listViews>
        <fullName>X04_Not_subscribed_to_automatic_re_order</fullName>
        <columns>NAME</columns>
        <columns>NES_Account__c</columns>
        <columns>NES_AutomaticOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NES_AutomaticOrder__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>03: Not subscribed to automatic re-order</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telemetry Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>